  - Les premiers béta-testeurs ont l'air satisfait

Beta 1.1: 2016-10-14
  - Protocole d'échange fini (nécessité de tester pour vérifier les erreurs)
  - Multiple bugs corrigés, fautes de frappes et surtout incohérences dans le système
  - Tables recues et envoies ajoutés à la BDD
  - Gestion des erreurs PHP: tout est logué

Mise à jour des emplois du temps: 2016-10-17 09:44:38

Beta 1.2: 2017-02-13
  - Ajout de l'envoie de mail lors d'une instansion d'échange
  - Des bugs revenus ont été corrigé
  - Ajout de la nécessité d'avoir déjà été connecté pour recevoir des mails
  - Ajout de l'affichage colorée des cases horaires en fonction de la date
  - Fixation des couleurs uniquement lors du mode affichage
  - Compatibilité créée avec les mobiles/petits formats (affichage de moins de jours, de façon dynamique)
  - Possibilité de balailler les différents jours avec le bouton qui s'affichage lorsque l'edt n'est pas entier
  - Modification de l'organisation (ajout de l'UV et de la salle)
  - Gestion des onglets modifiés (maintenant la suppression se fait directement sur l'onglet, comme pour chaque navigateur internet)
  - Optimisation de la recherche d'étudiants et d'UV
  - Les jours peuvent maintenant être défilés par un simple swipe à gauche ou à droite
  - Correction de nouveaux bugs
  - Changement de l'affichage des "tasks"
  - Ajout d'icônes pour simplifier la compréhension
  - Modification du nom: Agend'UTC => Emploi d'UTemps
  - Ajout au Gitlab: https://gitlab.utc.fr/simde/EmploisDUTemps/

Beta 1.3: 2017-02-14
  - Ajout de la table Jours pour le calendrier des alternances
  - Ajout d'un outil d'ajout manuel du calendrier des altenances
  - Finalisation de la préparation de la version béta