@@ -35,3 +35,4 @@ Créer un iframe pour la connexion au Moodle et à UVweb automatique
 Automatiquement refuser toutes les demandes à la désinscriptions
 Améliorer le défilement
 Créer un menu pour inscription déco etc...
+Refaire l'envoie de mail
